--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -39,4 +39,10 @@
         android:id="@+id/main_fraglayout"
         android:layout_height="match_parent"
         android:layout_width="match_parent"/>
+
+    <ImageView
+        android:id="@+id/test"
+        android:layout_width="400px"
+        android:layout_height="400px"
+        android:background="@drawable/ic_menu_camera"/>
 </RelativeLayout>
